Fix feature graphic on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,9 @@
 }
 
 .feature-graphic {
-  width: 600px;
-  height: 300px;
+  width: 100%;
+  height: 250px;
+  max-width: 500px;
 }
 
 .description-box {
